--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/yuktibhatt/mydoc#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
